--- a/Lesson-2/2_HTMLForms/SearchPage.html
+++ b/Lesson-2/2_HTMLForms/SearchPage.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <title>Search wizardry!</title>
+<body>
+
 <form action="http://www.google.com/search" method="GET">
   <label>Search term:
     <input type="text" name="q">
@@ -16,3 +18,5 @@
   <br>
   <button type="submit">Go go!</button>
 </form>
+  
+</body>
